# histomicstk-extras

./: .gitignore  Dockerfile  README.rst  pyproject.toml  tox.ini
.circleci/: config.yml
histomicstk_extras/: slicer_cli_list.json
histomicstk_extras/AnnotationFeatures/: AnnotationFeatures.py  AnnotationFeatures.xml
histomicstk_extras/CropImage/: CropImage.py  CropImage.xml
histomicstk_extras/RegisterImages/: RegisterImages.py  RegisterImages.xml
register_images/: slicer_cli_list.json
register_images/RegisterImages/: RegisterImages.py  RegisterImages.xml  progress_helper.py
